vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__declarations__tests__disconnection_specification_with_multiple_signals.snap
---
source: vhdl_syntax/src/parser/productions/declarations.rs
expression: "to_test_text(Parser::disconnection_specification,\n\"disconnect s1, s2 : work.pkg.bit_t after 10 ns;\",)"
---
DisconnectionSpecification
  Keyword(Disconnect)
  GuardedSignalSpecification
    SignalListList
      Name
        NameDesignatorPrefix
          Identifier 's1'
      Comma
      Name
        NameDesignatorPrefix
          Identifier 's2'
    Colon
    Name
      NameDesignatorPrefix
        Identifier 'work'
      SelectedName
        Dot
        Identifier 'pkg'
      SelectedName
        Dot
        Identifier 'bit_t'
  Keyword(After)
  PhysicalLiteralExpression
    PhysicalLiteral
      AbstractLiteral '10'
      Name
        NameDesignatorPrefix
          Identifier 'ns'
  SemiColon
