vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__declarations__tests__package_instantiation_generic_map.snap
---
source: vhdl_syntax/src/parser/productions/declarations.rs
expression: "to_test_text(Parser::package_instantiation_declaration,\n\"\\\npackage ident is new lib.foo.bar\n  generic map (\n    foo => bar\n  );\",)"
---
PackageInstantiationDeclaration
  PackageInstantiation
    PackageInstantiationPreamble
      Keyword(Package)
      Identifier 'ident'
      Keyword(Is)
      Keyword(New)
      Name
        Identifier 'lib'
        SelectedName
          Dot
          Identifier 'foo'
        SelectedName
          Dot
          Identifier 'bar'
    GenericMapAspect
      Keyword(Generic)
      Keyword(Map)
      ParenthesizedAssociationList
        LeftPar
        AssociationList
          AssociationElement
            FormalPart
              Name
                Identifier 'foo'
            RightArrow
            ActualPart
              Identifier 'bar'
        RightPar
  SemiColon
